------------------------------------------------------------------------

* on-receive doesn't have to exist for universe/world interactions 
  -- fixed

------------------------------------------------------------------------
Version 5.2				  [Tue Oct 18 12:34:16 EDT 2011]

* bug fixes in 2htdp/universe 
* also, on-release now works without presence of an on-key clause 

------------------------------------------------------------------------
Version 5.1.2				  [Fri Jul 22 15:27:37 EDT 2011]

* The error messages of the image and universe teachpacks have been 
  revised substantially. They will be improved again next release. 

* 5.1.3: the on-tick clause now takes a max number of ticks 
  
------------------------------------------------------------------------
Version 5.1.1				  [Tue Apr 26 22:38:44 EDT 2011]

* bug fix in registration process for universe 
  implies incompatibility of protocols between 5.1 programs and 
  predecessors

------------------------------------------------------------------------
Version 5.1				  [Tue Feb  8 13:05:17 EST 2011]

* to-draw (old name: on-draw) is now required for big-bang expressions 
* bug fixes in world, image, etc 

------------------------------------------------------------------------
Version 5.0.2.  			  [Wed Oct 27 18:30:26 EDT 2010]

* fixed stepper-universe interaction (on my side) 
* record? allows specification of a directory 
* small bug fixes 
* small doc fixes 

* batch-io is now in shape to be used (somewhat) in 2e

* robby added pinholes to his image teachpack 

------------------------------------------------------------------------
Version 5.0.1.  			  [Tue Jul 20 20:52:09 EDT 2010]

* typos in documentation 

------------------------------------------------------------------------

Version 5.0				  [Fri May 28 13:43:21 EDT 2010]

* added to-draw to universe to prepare the switch to the new terminoloy

------------------------------------------------------------------------